--- a/_bibliography/webpage_refs.bib
+++ b/_bibliography/webpage_refs.bib
@@ -2,9 +2,9 @@
 @article{randelhoff2018short,
   title = {Short Commentary on Marine Productivity at {{Arctic}} Shelf Breaks: {{Upwelling}}, Advection and Vertical Mixing},
   volume = {14},
-  doi = {10.5194/os-14-293-2018},
   number = {2},
   journal = {Ocean Science},
+  doi = {10.5194/os-14-293-2018},
   author = {Randelhoff, A. and Sundfjord, A.},
   year = {2018},
   pages = {293-300}
@@ -13,72 +13,65 @@
 @article{assmy2017leads,
   title = {Leads in {{Arctic}} Pack Ice Enable Early Phytoplankton Blooms below Snow-Covered Sea Ice},
   volume = {7},
-  doi = {dx.doi.org/10.1038/srep40850},
   number = {40850},
   journal = {Scientific Reports},
-  author = {Assmy, Philipp and {Fern\'andez-M\'endez}, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and R\"osel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, Torbj\~A\c{}rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
+  doi = {dx.doi.org/10.1038/srep40850},
+  author = {Assmy, Philipp and {Fern{\'a}ndez-M{\'e}ndez}, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and R{\"o}sel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, Torbj{\~A}\c{}rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
   month = jan,
   year = {2017},
-  file = {/Users/doppler/Zotero/storage/5MSKVJND/assmy2017leads.pdf;/Users/doppler/Zotero/storage/DCYXBIM5/assmy2017leads_supplementary.doc},
   publisher = {{The Author(s)}},
-  owner = {doppler}
 }
 
 @article{fer2017one,
   title = {One-Dimensional Evolution of the Upper Water Column in the {{Atlantic}} Sector of the {{Arctic Ocean}} in Winter},
   volume = {122},
   issn = {2169-9291},
-  doi = {10.1002/2016JC012431},
   number = {3},
   journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1002/2016JC012431},
   author = {Fer, Ilker and Peterson, Algot K. and Randelhoff, Achim and Meyer, Amelie},
   year = {2017},
   keywords = {Arctic Ocean,Arctic and Antarctic oceanography,and mixing processes,diffusion,mixing,Turbulence,Upper ocean and mixed layer processes,1-D model,entrainment,mixed layer,sea ice,Sea ice},
   pages = {1665-1682},
-  owner = {doppler}
 }
 
 @article{hudson2013energy,
   title = {Energy Budget of First-Year {{Arctic}} Sea Ice in Advanced Stages of Melt},
   volume = {40},
   issn = {1944-8007},
-  doi = {10.1002/grl.50517},
   number = {11},
   journal = {Geophysical Research Letters},
+  doi = {10.1002/grl.50517},
   author = {Hudson, Stephen R. and Granskog, Mats A. and Sundfjord, Arild and Randelhoff, Achim and Renner, Angelika H. H. and Divine, Dmitry V.},
   year = {2013},
   keywords = {sea ice,energy budget,radiation,turbulent heat fluxes},
   pages = {2679-2683},
-  file = {/Users/doppler/Zotero/storage/MKA7IQRS/Hudson et al. - 2013 - Energy budget of first-year Arctic sea ice in adva.pdf;/Users/doppler/Zotero/storage/RAXD94TH/hudson2013energy_suppl.pdf}
 }
 
 @article{peterson2017turbulent,
   title = {Turbulent Heat and Momentum Fluxes in the Upper Ocean under {{Arctic}} Sea Ice},
   volume = {122},
   issn = {2169-9291},
-  doi = {10.1002/2016JC012283},
   number = {2},
   journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1002/2016JC012283},
   author = {Peterson, Algot K. and Fer, Ilker and McPhee, Miles G. and Randelhoff, Achim},
   year = {2017},
   keywords = {Arctic and Antarctic oceanography,and mixing processes,diffusion,heat flux,mixing,turbulence,Turbulence,arctic,sea ice,Sea ice},
   pages = {1439-1456},
-  file = {/Users/doppler/Zotero/storage/NV846SUW/Peterson et al. - 2017 - Turbulent heat and momentum fluxes in the upper oc.pdf},
-  owner = {doppler}
 }
 
 @article{randelhoff2017turbulent,
   title = {Turbulent {{Upper}}-{{Ocean Mixing Affected}} by {{Meltwater Layers}} during {{Arctic Summer}}},
   volume = {47},
-  doi = {10.1175/JPO-D-16-0200.1},
-  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice\^aocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K\"I \^a N\^a1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
+  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice{\^a}ocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K{\"I} {\^a} N{\^a}1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
   number = {4},
   journal = {Journal of Physical Oceanography},
+  doi = {10.1175/JPO-D-16-0200.1},
   author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild},
   year = {2017},
   pages = {835-853},
   eprint = {https://doi.org/10.1175/JPO-D-16-0200.1},
-  owner = {doppler},
   bdsk-url-2 = {http://dx.doi.org/10.1175/JPO-D-16-0200.1}
 }
 
@@ -86,22 +79,20 @@
   title = {Vertical Fluxes of Nitrate in the Seasonal Nitracline of the {{Atlantic}} Sector of the {{Arctic Ocean}}},
   volume = {121},
   issn = {2169-9291},
-  doi = {10.1002/2016JC011779},
   number = {7},
   journal = {Journal of Geophysical Research: Oceans},
-  author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild and Tremblay, Jean-\'Eric and Reigstad, Marit},
+  doi = {10.1002/2016JC011779},
+  author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild and Tremblay, Jean-{\'E}ric and Reigstad, Marit},
   year = {2016},
   keywords = {Nutrients and nutrient cycling,and mixing processes,Arctic,diffusion,turbulence,Turbulence,Upper ocean and mixed layer processes,nitrate,Phytoplankton,Nitrogen cycling,vertical fluxes},
   pages = {5282-5295},
-  file = {/Users/doppler/Zotero/storage/INIID7SS/Randelhoff et al. - 2016 - Vertical fluxes of nitrate in the seasonal nitracl.pdf},
-  owner = {doppler}
 }
 
 @article{randelhoff2016regional,
   title = {Regional {{Patterns}} in {{Current}} and {{Future Export Production}} in the {{Central Arctic Ocean Quantified}} from {{Nitrate Fluxes}}},
   issn = {0094-8276},
-  doi = {10.1002/2016gl070252},
   journal = {Geophysical Research Letters},
+  doi = {10.1002/2016gl070252},
   author = {Randelhoff, Achim and Guthrie, John D.},
   year = {2016}
 }
@@ -110,16 +101,14 @@
   title = {Seasonal Variability and Fluxes of Nitrate in the Surface Waters over the {{Arctic}} Shelf Slope},
   volume = {42},
   issn = {0094-8276},
-  doi = {10.1002/2015gl063655},
   number = {9},
   journal = {Geophysical Research Letters},
+  doi = {10.1002/2015gl063655},
   author = {Randelhoff, Achim and Sundfjord, Arild and Reigstad, Marit},
   month = may,
   year = {2015},
   pages = {3442-3449},
-  file = {/Users/doppler/Zotero/storage/HKDA2JUH/randelhoff2015seasonal.pdf},
   publisher = {{Wiley-Blackwell}},
-  owner = {doppler},
   bdsk-url-2 = {http://dx.doi.org/10.1002/2015gl063655}
 }
 
@@ -127,20 +116,19 @@
   title = {Effects of a {{Shallow Pycnocline}} and {{Surface Meltwater}} on {{Sea Ice}}-{{Ocean Drag}} and {{Turbulent Heat Flux}}},
   volume = {44},
   issn = {1520-0485},
-  doi = {10.1175/jpo-d-13-0231.1},
   number = {8},
   journal = {J. Phys. Oceanogr.},
+  doi = {10.1175/jpo-d-13-0231.1},
   author = {Randelhoff, Achim and Sundfjord, Arild and Renner, Angelika H. H.},
   month = aug,
   year = {2014},
   pages = {2176-2190},
   publisher = {{American Meteorological Society}},
-  owner = {doppler},
   bdsk-url-2 = {http://dx.doi.org/10.1175/jpo-d-13-0231.1}
 }
 
 @book{randelhoff2017vertical,
-  address = {Troms\o, Norway},
+  address = {Troms{\o}, Norway},
   title = {Vertical Nitrate Fluxes in the {{Arctic Ocean}}},
   copyright = {openAccess},
   isbn = {978-82-8236-253-5},
@@ -154,21 +142,48 @@ Hydrography was found to be the biggest driver of variability in nitrate fluxes.
   author = {Randelhoff, Achim},
   month = mar,
   year = {2017},
-  file = {/Users/doppler/Zotero/storage/3EE8P8DB/Randelhoff - 2017 - Vertical nitrate fluxes in the Arctic Ocean.pdf;/Users/doppler/Zotero/storage/7HTBR9ZX/10948.html}
 }
 
 @article{randelhoff2018seasonality,
   title = {Seasonality of the {{Physical}} and {{Biogeochemical Hydrography}} in the {{Inflow}} to the {{Arctic Ocean Through Fram Strait}}},
   volume = {5},
   issn = {2296-7745},
-  doi = {10.3389/fmars.2018.00224},
-  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical \~nnutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ‘‘Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
+  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical {\~n}nutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
   language = {English},
   journal = {Frontiers in Marine Science},
-  author = {Randelhoff, Achim and Reigstad, Marit and Chierici, Melissa and Sundfjord, Arild and Ivanov, Vladimir and Cape, Mattias and Vernet, Maria and Tremblay, Jean-\'Eric and Bratbak, Gunnar and Kristiansen, Svein},
+  doi = {10.3389/fmars.2018.00224},
+  author = {Randelhoff, Achim and Reigstad, Marit and Chierici, Melissa and Sundfjord, Arild and Ivanov, Vladimir and Cape, Mattias and Vernet, Maria and Tremblay, Jean-{\'E}ric and Bratbak, Gunnar and Kristiansen, Svein},
   year = {2018},
   keywords = {Arctic Ocean,Atlantic water,Carbon,Convection,Hydrography,Nutrients,Shelf slope},
-  file = {/Users/doppler/Zotero/storage/MNCMZIXG/Randelhoff et al. - 2018 - Seasonality of the Physical and Biogeochemical Hyd.pdf}
+}
+
+@misc{randelhoff2019code,
+  title = {Code and Data for: {{The}} Evolution of Light and Vertical Mixing across a Phytoplankton Ice-Edge Bloom},
+  copyright = {Open Access},
+  shorttitle = {Code and Data For},
+  abstract = {This is a first release of the code (and the data and figures it produced) used by Randelhoff et al. for "The evolution of light and vertical mixing across a phytoplankton ice-edge bloom", Elementa: Science of the Anthropocene (2019).},
+  publisher = {{Zenodo}},
+  author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and B{\'e}cu, Guislain and Mart{\'i} Gal{\'i} and Lacour, L{\'e}o and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and {Marie-No{\"e}lle Houssais} and {Jean-{\'E}ric Tremblay} and Deslongchamps, Gabri{\`e}le and Babin, Marcel},
+  month = apr,
+  year = {2019},
+  keywords = {Arctic,phytoplankton bloom,turbulent mixing,ice edge,light},
+  doi = {10.5281/zenodo.2653854}
+}
+
+@article{randelhoff2019evolution,
+  title = {The Evolution of Light and Vertical Mixing across a Phytoplankton Ice-Edge Bloom},
+  volume = {7},
+  copyright = {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are \textcopyright, \textregistered{} or \texttrademark{} of their respective owners. No challenge to any owner's rights is intended or should be inferred.},
+  issn = {2325-1026},
+  abstract = {Article: The evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
+  language = {en},
+  number = {1},
+  journal = {Elem Sci Anth},
+  doi = {10.1525/elementa.357},
+  author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and B{\'e}cu, Guislain and Gal{\'i}, Mart{\'i} and Lacour, L{\'e}o and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and Houssais, Marie-No{\"e}lle and Tremblay, Jean-{\'E}ric and Deslongchamps, Gabri{\`e}le and Babin, Marcel},
+  month = may,
+  year = {2019},
+  pages = {20},
 }
 
 
