--- a/_bibliography/webpage_refs.bib
+++ b/_bibliography/webpage_refs.bib
@@ -1,194 +1,218 @@
+
 @article{randelhoff2018short,
-	title = {Short commentary on marine productivity at {Arctic} shelf breaks: {Upwelling}, advection and vertical mixing},
-	volume = {14},
-	url = {https://www.ocean-sci.net/14/293/2018/},
-	doi = {10.5194/os-14-293-2018},
-	number = {2},
-	journal = {Ocean Science},
-	author = {Randelhoff, A. and Sundfjord, A.},
-	year = {2018},
-	pages = {293--300}
+  title = {Short Commentary on Marine Productivity at {{Arctic}} Shelf Breaks: {{Upwelling}}, Advection and Vertical Mixing},
+  volume = {14},
+  number = {2},
+  journal = {Ocean Science},
+  doi = {10.5194/os-14-293-2018},
+  author = {Randelhoff, A. and Sundfjord, A.},
+  year = {2018},
+  pages = {293-300},
 }
 
 @article{assmy2017leads,
-	title = {Leads in {Arctic} pack ice enable early phytoplankton blooms below snow-covered sea ice},
-	volume = {7},
-	doi = {dx.doi.org/10.1038/srep40850},
-	number = {40850},
-	journal = {Scientific Reports},
-	author = {Assmy, Philipp and Fernández-Méndez, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and Rösel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, TorbjÃ¸rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
-	month = jan,
-	year = {2017},
+  title = {Leads in {{Arctic}} Pack Ice Enable Early Phytoplankton Blooms below Snow-Covered Sea Ice},
+  volume = {7},
+  number = {40850},
+  journal = {Scientific Reports},
+  doi = {dx.doi.org/10.1038/srep40850},
+  author = {Assmy, Philipp and {Fern{\'a}ndez-M{\'e}ndez}, Mar and Duarte, Pedro and Meyer, Amelie and Randelhoff, Achim and Mundy, Christopher J. and Olsen, Lasse M. and Kauko, Hanna M. and Bailey, Allison and Chierici, Melissa and Cohen, Lana and Doulgeris, Anthony P. and Ehn, Jens K. and Fransson, Agneta and Gerland, Sebastian and Hop, Haakon and Hudson, Stephen R. and Hughes, Nick and Itkin, Polona and Johnsen, Geir and King, Jennifer A. and Koch, Boris P. and Koenig, Zoe and Kwasniewski, Slawomir and Laney, Samuel R. and Nicolaus, Marcel and Pavlov, Alexey K. and Polashenski, Christopher M. and Provost, Christine and R{\"o}sel, Anja and Sandbu, Marthe and Spreen, Gunnar and Smedsrud, Lars H. and Sundfjord, Arild and Taskjelle, Torbj{\~A}\c{}rn and Tatarek, Agnieszka and Wiktor, Jozef and Wagner, Penelope M. and Wold, Anette and Steen, Harald and Granskog, Mats A.},
+  month = jan,
+  year = {2017},
 }
 
 @article{fer2017one,
-	title = {One-dimensional evolution of the upper water column in the {Atlantic} sector of the {Arctic} {Ocean} in winter},
-	volume = {122},
-	issn = {2169-9291},
-	url = {http://dx.doi.org/10.1002/2016JC012431},
-	doi = {10.1002/2016JC012431},
-	number = {3},
-	journal = {Journal of Geophysical Research: Oceans},
-	author = {Fer, Ilker and Peterson, Algot K. and Randelhoff, Achim and Meyer, Amelie},
-	year = {2017},
-	keywords = {Arctic Ocean, Arctic and Antarctic oceanography, and mixing processes, diffusion, mixing, Turbulence, Upper ocean and mixed layer processes, 1-D model, entrainment, mixed layer, sea ice, Sea ice},
-	pages = {1665--1682}
+  title = {One-Dimensional Evolution of the Upper Water Column in the {{Atlantic}} Sector of the {{Arctic Ocean}} in Winter},
+  volume = {122},
+  issn = {2169-9291},
+  number = {3},
+  journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1002/2016JC012431},
+  author = {Fer, Ilker and Peterson, Algot K. and Randelhoff, Achim and Meyer, Amelie},
+  year = {2017},
+  keywords = {Arctic Ocean,Arctic and Antarctic oceanography,and mixing processes,diffusion,mixing,Turbulence,Upper ocean and mixed layer processes,1-D model,entrainment,mixed layer,sea ice,Sea ice},
+  pages = {1665-1682},
 }
 
 @article{hudson2013energy,
-	title = {Energy budget of first-year {Arctic} sea ice in advanced stages of melt},
-	volume = {40},
-	issn = {1944-8007},
-	url = {http://dx.doi.org/10.1002/grl.50517},
-	doi = {10.1002/grl.50517},
-	number = {11},
-	journal = {Geophysical Research Letters},
-	author = {Hudson, Stephen R. and Granskog, Mats A. and Sundfjord, Arild and Randelhoff, Achim and Renner, Angelika H. H. and Divine, Dmitry V.},
-	year = {2013},
-	keywords = {sea ice, energy budget, radiation, turbulent heat fluxes},
-	pages = {2679--2683},
+  title = {Energy Budget of First-Year {{Arctic}} Sea Ice in Advanced Stages of Melt},
+  volume = {40},
+  issn = {1944-8007},
+  number = {11},
+  journal = {Geophysical Research Letters},
+  doi = {10.1002/grl.50517},
+  author = {Hudson, Stephen R. and Granskog, Mats A. and Sundfjord, Arild and Randelhoff, Achim and Renner, Angelika H. H. and Divine, Dmitry V.},
+  year = {2013},
+  keywords = {sea ice,energy budget,radiation,turbulent heat fluxes},
+  pages = {2679-2683},
 }
 
 @article{peterson2017turbulent,
-	title = {Turbulent heat and momentum fluxes in the upper ocean under {Arctic} sea ice},
-	volume = {122},
-	issn = {2169-9291},
-	url = {http://dx.doi.org/10.1002/2016JC012283},
-	doi = {10.1002/2016JC012283},
-	number = {2},
-	journal = {Journal of Geophysical Research: Oceans},
-	author = {Peterson, Algot K. and Fer, Ilker and McPhee, Miles G. and Randelhoff, Achim},
-	year = {2017},
-	keywords = {Arctic and Antarctic oceanography, and mixing processes, diffusion, heat flux, mixing, turbulence, Turbulence, arctic, sea ice, Sea ice},
-	pages = {1439--1456},
+  title = {Turbulent Heat and Momentum Fluxes in the Upper Ocean under {{Arctic}} Sea Ice},
+  volume = {122},
+  issn = {2169-9291},
+  number = {2},
+  journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1002/2016JC012283},
+  author = {Peterson, Algot K. and Fer, Ilker and McPhee, Miles G. and Randelhoff, Achim},
+  year = {2017},
+  keywords = {Arctic and Antarctic oceanography,and mixing processes,diffusion,heat flux,mixing,turbulence,Turbulence,arctic,sea ice,Sea ice},
+  pages = {1439-1456},
 }
 
 @article{randelhoff2017turbulent,
-	title = {Turbulent {Upper}-{Ocean} {Mixing} {Affected} by {Meltwater} {Layers} during {Arctic} {Summer}},
-	volume = {47},
-	url = {https://doi.org/10.1175/JPO-D-16-0200.1},
-	doi = {10.1175/JPO-D-16-0200.1},
-	abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, iceâocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (KÏ â Nâ1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
-	number = {4},
-	journal = {Journal of Physical Oceanography},
-	author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild},
-	year = {2017},
-	pages = {835--853}
+  title = {Turbulent {{Upper}}-{{Ocean Mixing Affected}} by {{Meltwater Layers}} during {{Arctic Summer}}},
+  volume = {47},
+  abstract = {AbstractEvery summer, intense sea ice melt around the margins of the Arctic pack ice leads to a stratified surface layer, potentially without a traditional surface mixed layer. The associated strengthening of near-surface stratification has important consequences for the redistribution of near-inertial energy, ice{\^a}ocean heat fluxes, and vertical replenishment of nutrients required for biological growth. The authors describe the vertical structure of meltwater layers and quantify their seasonal evolution and their effect on turbulent mixing in the oceanic boundary layer by analyzing more than 450 vertical profiles of velocity microstructure in the seasonal ice zone north of Svalbard. The vertical structure of the density profiles can be summarized by an equivalent mixed layer depth hBD, which scales with the depth of the seasonal stratification. As the season progresses and melt rates increase, hBD shoals following a robust pattern, implying stronger vertical stratification, weaker vertical eddy diffusivity, and reduced vertical extent of the mixing layer, which is bounded by hBD. Through most of the seasonal pycnocline, the vertical eddy diffusivity scales inversely with buoyancy frequency (K{\"I} {\^a} N{\^a}1). The presence of mobile sea ice alters the magnitude and vertical structure of turbulent mixing primarily through stronger and shallower stratification, and thus vertical eddy diffusivity is greatly reduced under sea ice. This study uses these results to develop a quantitative model of surface layer turbulent mixing during Arctic summer and discuss the impacts of a changing sea ice cover.},
+  number = {4},
+  journal = {Journal of Physical Oceanography},
+  doi = {10.1175/JPO-D-16-0200.1},
+  author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild},
+  year = {2017},
+  pages = {835-853},
+  eprint = {https://doi.org/10.1175/JPO-D-16-0200.1},
+  bdsk-url-2 = {http://dx.doi.org/10.1175/JPO-D-16-0200.1}
 }
 
 @article{randelhoff2016vertical,
-	title = {Vertical fluxes of nitrate in the seasonal nitracline of the {Atlantic} sector of the {Arctic} {Ocean}},
-	volume = {121},
-	issn = {2169-9291},
-	url = {http://dx.doi.org/10.1002/2016JC011779},
-	doi = {10.1002/2016JC011779},
-	number = {7},
-	journal = {Journal of Geophysical Research: Oceans},
-	author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild and Tremblay, Jean-Éric and Reigstad, Marit},
-	year = {2016},
-	keywords = {Nutrients and nutrient cycling, and mixing processes, Arctic, diffusion, turbulence, Turbulence, Upper ocean and mixed layer processes, nitrate, Phytoplankton, Nitrogen cycling, vertical fluxes},
-	pages = {5282--5295},
+  title = {Vertical Fluxes of Nitrate in the Seasonal Nitracline of the {{Atlantic}} Sector of the {{Arctic Ocean}}},
+  volume = {121},
+  issn = {2169-9291},
+  number = {7},
+  journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1002/2016JC011779},
+  author = {Randelhoff, Achim and Fer, Ilker and Sundfjord, Arild and Tremblay, Jean-{\'E}ric and Reigstad, Marit},
+  year = {2016},
+  keywords = {Nutrients and nutrient cycling,and mixing processes,Arctic,diffusion,turbulence,Turbulence,Upper ocean and mixed layer processes,nitrate,Phytoplankton,Nitrogen cycling,vertical fluxes},
+  pages = {5282-5295},
 }
 
 @article{randelhoff2016regional,
-	title = {Regional {Patterns} in {Current} and {Future} {Export} {Production} in the {Central} {Arctic} {Ocean} {Quantified} from {Nitrate} {Fluxes}},
-	issn = {0094-8276},
-	url = {http://dx.doi.org/10.1002/2016gl070252},
-	doi = {10.1002/2016gl070252},
-	journal = {Geophysical Research Letters},
-	author = {Randelhoff, Achim and Guthrie, John D.},
-	year = {2016}
+  title = {Regional {{Patterns}} in {{Current}} and {{Future Export Production}} in the {{Central Arctic Ocean Quantified}} from {{Nitrate Fluxes}}},
+  issn = {0094-8276},
+  journal = {Geophysical Research Letters},
+  doi = {10.1002/2016gl070252},
+  author = {Randelhoff, Achim and Guthrie, John D.},
+  year = {2016}
 }
 
 @article{randelhoff2015seasonal,
-	title = {Seasonal variability and fluxes of nitrate in the surface waters over the {Arctic} shelf slope},
-	volume = {42},
-	issn = {0094-8276},
-	url = {http://dx.doi.org/10.1002/2015GL063655},
-	doi = {10.1002/2015gl063655},
-	number = {9},
-	journal = {Geophysical Research Letters},
-	author = {Randelhoff, Achim and Sundfjord, Arild and Reigstad, Marit},
-	month = may,
-	year = {2015},
-	pages = {3442--3449},
+  title = {Seasonal Variability and Fluxes of Nitrate in the Surface Waters over the {{Arctic}} Shelf Slope},
+  volume = {42},
+  issn = {0094-8276},
+  number = {9},
+  journal = {Geophysical Research Letters},
+  doi = {10.1002/2015gl063655},
+  author = {Randelhoff, Achim and Sundfjord, Arild and Reigstad, Marit},
+  month = may,
+  year = {2015},
+  pages = {3442-3449},
+  publisher = {Wiley-Blackwell},
+  bdsk-url-2 = {http://dx.doi.org/10.1002/2015gl063655}
 }
 
 @article{randelhoff2014effects,
-	title = {Effects of a {Shallow} {Pycnocline} and {Surface} {Meltwater} on {Sea} {Ice}-{Ocean} {Drag} and {Turbulent} {Heat} {Flux}},
-	volume = {44},
-	issn = {1520-0485},
-	url = {http://dx.doi.org/10.1175/JPO-D-13-0231.1},
-	doi = {10.1175/jpo-d-13-0231.1},
-	number = {8},
-	journal = {J. Phys. Oceanogr.},
-	author = {Randelhoff, Achim and Sundfjord, Arild and Renner, Angelika H. H.},
-	month = aug,
-	year = {2014},
-	pages = {2176--2190}
+  title = {Effects of a {{Shallow Pycnocline}} and {{Surface Meltwater}} on {{Sea Ice}}-{{Ocean Drag}} and {{Turbulent Heat Flux}}},
+  volume = {44},
+  issn = {1520-0485},
+  number = {8},
+  journal = {J. Phys. Oceanogr.},
+  doi = {10.1175/jpo-d-13-0231.1},
+  author = {Randelhoff, Achim and Sundfjord, Arild and Renner, Angelika H. H.},
+  month = aug,
+  year = {2014},
+  pages = {2176-2190},
+  publisher = {American Meteorological Society},
+  bdsk-url-2 = {http://dx.doi.org/10.1175/jpo-d-13-0231.1}
 }
 
 @book{randelhoff2017vertical,
-	address = {Tromsø, Norway},
-	title = {Vertical nitrate fluxes in the {Arctic} {Ocean}},
-	copyright = {openAccess},
-	isbn = {978-82-8236-253-5},
-	url = {http://hdl.handle.net/10037/10948},
-	abstract = {Upward mixing of remineralized nutrients is essential for photosynthesis in the upper ocean. Weak vertical mixing, which restricts nutrient supply, and sea ice, which leads to low light levels, conspire to severely inhibit marine primary productivity in the Arctic Ocean. However, little has been known about their relative contributions. No large-scale quantitative estimates of the vertical nutrient supply had previously been presented, which has impeded an understanding of its role in shaping the ecology and carbon cycle of the Arctic Ocean.
+  address = {{Troms{\o}, Norway}},
+  title = {Vertical Nitrate Fluxes in the {{Arctic Ocean}}},
+  copyright = {openAccess},
+  isbn = {978-82-8236-253-5},
+  abstract = {Upward mixing of remineralized nutrients is essential for photosynthesis in the upper ocean. Weak vertical mixing, which restricts nutrient supply, and sea ice, which leads to low light levels, conspire to severely inhibit marine primary productivity in the Arctic Ocean. However, little has been known about their relative contributions. No large-scale quantitative estimates of the vertical nutrient supply had previously been presented, which has impeded an understanding of its role in shaping the ecology and carbon cycle of the Arctic Ocean.
 
 In order to estimate the vertical flux of nitrate into the surface layer in contrasting hydrographic and dynamic regimes, profiles of turbulent microstructure and nitrate concentrations were measured as part of a number of cruises and ice camps in the area extending from eastern Fram Strait into the Nansen Basin. These have been supplemented with obervations of the seasonal nutrient cycle at a mooring in the same area, and a reanalysis of available data on nitrate concentrations and turbulent mixing in other parts of the central Arctic Ocean.
 
-Hydrography was found to be the biggest driver of variability in nitrate fluxes. Strong stratification, wherever encountered, restricted nitrate supply, often in concert with concurrently weak turbulent mixing, both in the seasonal nitracline (0.3–0.7 mmol N m-2 d-1) and the deep basin (0.01–0.2 mmol N m-2 d-1). Thus deep winter mixing supplies the bulk of the nitrate pool on the relatively productive shelves (e.g. 2.5 mmol N m-2 d-1 in the inflow of Atlantic Water during winter), but in the strongly stratified Canadian Basin, fluxes are low year-round (on the order of 0.01 mmol N m-2 d-1) and place a tight limit on new production. Only the weakly stratified Atlantic derived water in the Nansen Basin close to Fram Strait seems to have a certain potential to support future increases in new production under a seasonal ice cover.},
-	language = {eng},
-	urldate = {2018-06-25},
-	publisher = {UiT Norges arktiske universitet},
-	author = {Randelhoff, Achim},
-	month = mar,
-	year = {2017},
+Hydrography was found to be the biggest driver of variability in nitrate fluxes. Strong stratification, wherever encountered, restricted nitrate supply, often in concert with concurrently weak turbulent mixing, both in the seasonal nitracline (0.3\textendash{}0.7 mmol N m-2 d-1) and the deep basin (0.01\textendash{}0.2 mmol N m-2 d-1). Thus deep winter mixing supplies the bulk of the nitrate pool on the relatively productive shelves (e.g. 2.5 mmol N m-2 d-1 in the inflow of Atlantic Water during winter), but in the strongly stratified Canadian Basin, fluxes are low year-round (on the order of 0.01 mmol N m-2 d-1) and place a tight limit on new production. Only the weakly stratified Atlantic derived water in the Nansen Basin close to Fram Strait seems to have a certain potential to support future increases in new production under a seasonal ice cover.},
+  language = {eng},
+  publisher = {{UiT Norges arktiske universitet}},
+  author = {Randelhoff, Achim},
+  month = mar,
+  year = {2017},
 }
 
 @article{randelhoff2018seasonality,
-	title = {Seasonality of the {Physical} and {Biogeochemical} {Hydrography} in the {Inflow} to the {Arctic} {Ocean} {Through} {Fram} {Strait}},
-	volume = {5},
-	issn = {2296-7745},
-	url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00224/full?&utm_source=Email_to_authors_&utm_medium=Email&utm_content=T1_11.5e1_author&utm_campaign=Email_publication&field=&journalName=Frontiers_in_Marine_Science&id=377832},
-	doi = {10.3389/fmars.2018.00224},
-	abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical ñnutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
-	language = {English},
-	urldate = {2018-06-29},
-	journal = {Frontiers in Marine Science},
-	author = {Randelhoff, Achim and Reigstad, Marit and Chierici, Melissa and Sundfjord, Arild and Ivanov, Vladimir and Cape, Mattias and Vernet, Maria and Tremblay, Jean-Éric and Bratbak, Gunnar and Kristiansen, Svein},
-	year = {2018},
-	keywords = {Arctic Ocean, Atlantic water, Carbon, Convection, Hydrography, Nutrients, Shelf slope},
+  title = {Seasonality of the {{Physical}} and {{Biogeochemical Hydrography}} in the {{Inflow}} to the {{Arctic Ocean Through Fram Strait}}},
+  volume = {5},
+  issn = {2296-7745},
+  abstract = {Eastern Fram Strait and the shelf slope region north of Svalbard is dominated by the advection of warm, salty and nutrient-rich Atlantic Water (AW). This oceanic heat contributes to keeping the area relatively free of ice. The last years have seen a dramatic decrease in regional sea ice extent, which is expected to drive large increases in pelagic primary production and thereby changes in marine ecology and nutrient cycling. In a concerted effort, we conducted five cruises to the area in winter, spring, summer and fall of 2014, in order to understand the physical and biogeochemical controls of carbon cycling, for the first time from a year-round point of view. We document (1) the offshore location of the wintertime front between salty AW and fresher Surface Water in the ocean surface, (2) thermal convection of Atlantic Water over the shelf slope, likely enhancing vertical {\~n}nutrient fluxes, and (3) the importance of ice melt derived upper ocean stratification for the spring bloom timing. Our findings strongly confirm the hypothesis that this ``Atlantification'', as it has been called, of the shelf slope area north of Svalbard resulting from the advection of AW alleviates both nutrient and light limitations at the same time, leading to increased pelagic primary productivity in this region.},
+  language = {English},
+  journal = {Frontiers in Marine Science},
+  doi = {10.3389/fmars.2018.00224},
+  author = {Randelhoff, Achim and Reigstad, Marit and Chierici, Melissa and Sundfjord, Arild and Ivanov, Vladimir and Cape, Mattias and Vernet, Maria and Tremblay, Jean-{\'E}ric and Bratbak, Gunnar and Kristiansen, Svein},
+  year = {2018},
+  keywords = {Arctic Ocean,Atlantic water,Carbon,Convection,Hydrography,Nutrients,Shelf slope},
 }
 
 @article{randelhoff2019evolution,
-	title = {The evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
-	volume = {7},
-	copyright = {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are ©, ® or ™ of their respective owners. No challenge to any owner’s rights is intended or should be inferred.},
-	issn = {2325-1026},
-	url = {http://www.elementascience.org/article/10.1525/elementa.357/},
-	doi = {10.1525/elementa.357},
-	abstract = {Article: The evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
-	language = {en},
-	number = {1},
-	urldate = {2019-05-30},
-	journal = {Elem Sci Anth},
-	author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and Bécu, Guislain and Galí, Martí and Lacour, Léo and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and Houssais, Marie-Noëlle and Tremblay, Jean-Éric and Deslongchamps, Gabrièle and Babin, Marcel},
-	month = may,
-	year = {2019},
-	pages = {20},
+  title = {The Evolution of Light and Vertical Mixing across a Phytoplankton Ice-Edge Bloom},
+  volume = {7},
+  copyright = {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are \textcopyright, \textregistered{} or \texttrademark{} of their respective owners. No challenge to any owner's rights is intended or should be inferred.},
+  issn = {2325-1026},
+  abstract = {Article: The evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
+  language = {en},
+  number = {1},
+  journal = {Elem Sci Anth},
+  doi = {10.1525/elementa.357},
+  author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and B{\'e}cu, Guislain and Gal{\'i}, Mart{\'i} and Lacour, L{\'e}o and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and Houssais, Marie-No{\"e}lle and Tremblay, Jean-{\'E}ric and Deslongchamps, Gabri{\`e}le and Babin, Marcel},
+  month = may,
+  year = {2019},
+  pages = {20},
 }
 
 @misc{randelhoff2019code,
-	title = {Code and data for: {The} evolution of light and vertical mixing across a phytoplankton ice-edge bloom},
-	copyright = {Open Access},
-	url = {https://github.com/poplarShift/ice-edge},
-	abstract = {This is a first release of the code (and the data and figures it produced) used by Randelhoff et al. for "The evolution of light and vertical mixing across a phytoplankton ice-edge bloom", Elementa: Science of the Anthropocene (2019).},
-	urldate = {2019-05-30},
-	publisher = {Zenodo},
-	author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and Bécu, Guislain and Martí Galí and Lacour, Léo and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and Marie-Noëlle Houssais and Jean-Éric Tremblay and Deslongchamps, Gabrièle and Babin, Marcel},
-	year = {2019},
-	doi = {10.5281/zenodo.2653855},
-	keywords = {Arctic, phytoplankton bloom, turbulent mixing, ice edge, light}
+  title = {Code and Data for: {{The}} Evolution of Light and Vertical Mixing across a Phytoplankton Ice-Edge Bloom},
+  copyright = {Open Access},
+  abstract = {This is a first release of the code (and the data and figures it produced) used by Randelhoff et al. for "The evolution of light and vertical mixing across a phytoplankton ice-edge bloom", Elementa: Science of the Anthropocene (2019).},
+  publisher = {{Zenodo}},
+  author = {Randelhoff, Achim and Oziel, Laurent and Massicotte, Philippe and B{\'e}cu, Guislain and Mart{\'i} Gal{\'i} and Lacour, L{\'e}o and Dumont, Dany and Vladoiu, Anda and Marec, Claudie and Bruyant, Flavienne and {Marie-No{\"e}lle Houssais} and {Jean-{\'E}ric Tremblay} and Deslongchamps, Gabri{\`e}le and Babin, Marcel},
+  year = {2019},
+  keywords = {Arctic,phytoplankton bloom,turbulent mixing,ice edge,light},
+  doi = {10.5281/zenodo.2653855}
 }
+
+@article{graham2019winter,
+  title = {Winter Storms Accelerate the Demise of Sea Ice in the {{Atlantic}} Sector of the {{Arctic Ocean}}},
+  volume = {9},
+  copyright = {2019 The Author(s)},
+  issn = {2045-2322},
+  abstract = {A large retreat of sea-ice in the `stormy' Atlantic Sector of the Arctic Ocean has become evident through a series of record minima for the winter maximum sea-ice extent since 2015. Results from the Norwegian young sea ICE (N-ICE2015) expedition, a five-month-long (Jan-Jun) drifting ice station in first and second year pack-ice north of Svalbard, showcase how sea-ice in this region is frequently affected by passing winter storms. Here we synthesise the interdisciplinary N-ICE2015 dataset, including independent observations of the atmosphere, snow, sea-ice, ocean, and ecosystem. We build upon recent results and illustrate the different mechanisms through which winter storms impact the coupled Arctic sea-ice system. These short-lived and episodic synoptic-scale events transport pulses of heat and moisture into the Arctic, which temporarily reduce radiative cooling and henceforth ice growth. Cumulative snowfall from each sequential storm deepens the snow pack and insulates the sea-ice, further inhibiting ice growth throughout the remaining winter season. Strong winds fracture the ice cover, enhance ocean-ice-atmosphere heat fluxes, and make the ice more susceptible to lateral melt. In conclusion, the legacy of Arctic winter storms for sea-ice and the ice-associated ecosystem in the Atlantic Sector lasts far beyond their short lifespan.},
+  language = {en},
+  number = {1},
+  journal = {Scientific Reports},
+  doi = {10.1038/s41598-019-45574-5},
+  author = {Graham, Robert M. and Itkin, Polona and Meyer, Amelie and Sundfjord, Arild and Spreen, Gunnar and Smedsrud, Lars H. and Liston, Glen E. and Cheng, Bin and Cohen, Lana and Divine, Dmitry and Fer, Ilker and Fransson, Agneta and Gerland, Sebastian and Haapala, Jari and Hudson, Stephen R. and Johansson, A. Malin and King, Jennifer and Merkouriadi, Ioanna and Peterson, Algot K. and Provost, Christine and Randelhoff, Achim and Rinke, Annette and R{\"o}sel, Anja and Senn{\'e}chael, Nathalie and Walden, Von P. and Duarte, Pedro and Assmy, Philipp and Steen, Harald and Granskog, Mats A.},
+  month = jun,
+  year = {2019},
+  pages = {1-16},
+}
+
+@article{oziel2019environmental,
+  title = {Environmental Factors Influencing the Seasonal Dynamics of Spring Algal Blooms in and beneath Sea Ice in Western {{Baffin Bay}}},
+  volume = {7},
+  copyright = {Authors who publish with this journal agree to the following terms:    Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).  All third-party images reproduced on this journal are shared under Educational Fair Use. For more information on  Educational Fair Use , please see  this useful checklist prepared by Columbia University Libraries .   All copyright  of third-party content posted here for research purposes belongs to its original owners.  Unless otherwise stated all references to characters and comic art presented on this journal are \textcopyright, \textregistered{} or \texttrademark{} of their respective owners. No challenge to any owner's rights is intended or should be inferred.},
+  issn = {2325-1026},
+  abstract = {Article: Environmental factors influencing the seasonal dynamics of spring algal blooms in and beneath sea ice in western Baffin Bay},
+  language = {en},
+  number = {1},
+  journal = {Elem Sci Anth},
+  doi = {10.1525/elementa.372},
+  author = {Oziel, L. and Massicotte, P. and Randelhoff, A. and Ferland, J. and Vladoiu, A. and Lacour, L. and Galindo, V. and {Lambert-Girard}, S. and Dumont, D. and Cuypers, Y. and {Bouruet-Aubertot}, P. and Mundy, C.-J. and Ehn, J. and B{\'e}cu, G. and Marec, C. and Forget, M.-H. and Garcia, N. and Coupel, P. and Raimbault, P. and Houssais, M.-N. and Babin, M.},
+  month = aug,
+  year = {2019},
+  pages = {34},
+}
+
+
